--- a/index.html
+++ b/index.html
@@ -1,11 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Influencer Gear Web Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <!--Header Section Start-->
+    <header id="header">
+        <nav class="nav">
+            <h2 class="nav-title">Influencer products</h2>
+            <ul class="nav-link">
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log In</a></li>
+                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-cart-plus"></i></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h2 class="banner-title">Start your Journey as Influencer</h2>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
+                    sed scelerisque eros. Lectus faucibus.</p>
+                <button class="banner-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-img">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!--Header Section End-->
+    <!--Main Section Start-->
+    <main id="main">
+        <!--Our Online Partner Section-->
+        <section>
+            <div class="online-partner-container">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
+        <!--Popular collection-->
+        <section>
+            <div class="popular-collection">
+                <h2 class="popular-title">Popular Collection</h2>
+                <div class="popular-collection-container">
+                    <div class="popular-collection-items">
+                        <img src="images/action.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/airpod.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/camera.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/lights.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/drone.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/gear.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/single-light.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/mic.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                    <div class="popular-collection-items">
+                        <img src="images/tripod.png" alt="">
+                        <h3 class="popular-collection-title">Flex Tripod</h3>
+                        <div class="review">
+                            <p class="review-star">
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star gold"></i>
+                                <i class="fa-solid fa-star-half-stroke gold"></i>
+                            </p>
+                            <p class="review-content">4.99</p>
+                        </div>
+                        <p class="popular-collection-price">$50.48</p>
+                        <p class="popular-collection-description">Wordwide shifting<br> available<br> Buyers protection
+                            possible!</p>
+                    </div>
+                </div>
+                <p class="see-more">see more <i class="fa-solid fa-arrow-right"></i></p>
+            </div>
+        </section>
+        <!--Feature Images Section-->
+        <section>
+            <div class="feature">
+                <div class="feature-img">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="feature-content">
+                    <h2 class="feature-title">Featured products at one place</h2>
+                    <p class="feature-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="feature-btn">Join Now  <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!--Main Section End-->
+    <footer>
+        <div class="footer">
+            <h3 class="footer-title">Influencer products</h3>
+            <p class="footer-description">Copyright © 2020  influencer products <br>All rights reserved</p>
+            <ul>
+                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
